# vc-trabajo-final-cliente-deteccion-clientes

./: pyproject.toml
camera_client_pedestrian_counting/: camera.py  control.py  main.py  notificator.py  pedestrian_tracker.py
